# RGO-lib-parser

./: .codacy.yaml  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.ru.md  README.md  README.ru.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  ru_geo_lib_parser_by_b0s.py  tox.ini
.github/: CODEOWNERS  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml
.github/workflows/: bandit.yml  build-v1.0-release.yml  ci.yml  codacy.yml  crossbuild-release.yml  dependabot.yml  labeler.yml  pull_request_template.md  scorecard.yml
assets/: macapp_lilacbook.icns
cur version/: ru_geo_lib_parser_by_b0s.py  ru_geo_lib_parser_by_b0s.spec
old versions/v0.1 separated/: sdloady_RGO_lib.py  spready_RGO_lib.py
old versions/v1.0/: ru_geo_society_lib_parser_v1_0.py  ru_geo_society_lib_parser_v1_0.spec
scripts/: run_app.py
src/: __init__.py  app_state.py  config.py  gui.py  image_processing.py  logic.py  main.py  rgo_lib_parser_by_b0s.py  rgo_lib_parser_test.py  ru_geo_lib_parser_by_b0s.py  settings_manager.py  task_manager.py  types.py  ui_builder.py  utils.py
tests/: __init__.py  test_app_state.py  test_config.py  test_image_processing.py  test_logic.py  test_main.py  test_settings_manager.py  test_task_manager.py  test_utils.py
v0.1 separated/: requirements.txt  sdloady_RGO_lib.py  spready_RGO_lib.py
